--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -30,7 +30,7 @@
      <string notr="true"/>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="stackedWidgetPage1">
      <widget class="QWidget" name="layoutWidget">
@@ -38,7 +38,7 @@
        <rect>
         <x>20</x>
         <y>50</y>
-        <width>104</width>
+        <width>82</width>
         <height>381</height>
        </rect>
       </property>
@@ -189,7 +189,7 @@
        <rect>
         <x>610</x>
         <y>50</y>
-        <width>121</width>
+        <width>111</width>
         <height>381</height>
        </rect>
       </property>
@@ -353,13 +353,13 @@
      <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
-        <x>500</x>
+        <x>510</x>
         <y>71</y>
-        <width>211</width>
-        <height>331</height>
+        <width>201</width>
+        <height>341</height>
        </rect>
       </property>
-      <layout class="QGridLayout" name="gridLayout">
+      <layout class="QGridLayout" name="gridLayout_13">
        <item row="0" column="0">
         <widget class="QSplitter" name="splitter_4">
          <property name="orientation">
@@ -391,7 +391,7 @@
          <property name="sizeHint" stdset="0">
           <size>
            <width>20</width>
-           <height>40</height>
+           <height>28</height>
           </size>
          </property>
         </spacer>
@@ -404,7 +404,7 @@
             <cursorShape>IBeamCursor</cursorShape>
            </property>
            <property name="text">
-            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#000000;&quot;&gt;Current Purchase:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#000000;&quot;&gt;Current Purchase($):&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
            </property>
           </widget>
          </item>
@@ -414,7 +414,7 @@
             <cursorShape>IBeamCursor</cursorShape>
            </property>
            <property name="text">
-            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#000000;&quot;&gt;$&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#000000;&quot;&gt;amount_spent&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
            </property>
           </widget>
          </item>
@@ -428,7 +428,7 @@
          <property name="sizeHint" stdset="0">
           <size>
            <width>20</width>
-           <height>40</height>
+           <height>28</height>
           </size>
          </property>
         </spacer>
@@ -454,7 +454,7 @@
          <property name="sizeHint" stdset="0">
           <size>
            <width>20</width>
-           <height>40</height>
+           <height>28</height>
           </size>
          </property>
         </spacer>
@@ -467,7 +467,7 @@
             <cursorShape>IBeamCursor</cursorShape>
            </property>
            <property name="text">
-            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#000000;&quot;&gt;Total Purchase:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#000000;&quot;&gt;Total Purchase($):&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
            </property>
           </widget>
          </item>
@@ -477,7 +477,7 @@
             <cursorShape>IBeamCursor</cursorShape>
            </property>
            <property name="text">
-            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#000000;&quot;&gt;$&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;total_spent&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
            </property>
           </widget>
          </item>
@@ -491,12 +491,43 @@
          <property name="sizeHint" stdset="0">
           <size>
            <width>20</width>
-           <height>40</height>
+           <height>28</height>
           </size>
          </property>
         </spacer>
        </item>
        <item row="8" column="0">
+        <layout class="QGridLayout" name="gridLayout">
+         <item row="0" column="0">
+          <widget class="QLabel" name="label_9">
+           <property name="text">
+            <string>Distance Travelled(km):</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QLabel" name="label_10">
+           <property name="text">
+            <string>TextLabel</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item row="9" column="0">
+        <spacer name="verticalSpacer_8">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>18</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="10" column="0">
         <widget class="QPushButton" name="NextCity_pushButton">
          <property name="cursor">
           <cursorShape>PointingHandCursor</cursorShape>
@@ -771,7 +802,7 @@
         <x>11</x>
         <y>11</y>
         <width>251</width>
-        <height>121</height>
+        <height>107</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_3">
@@ -802,7 +833,7 @@
         </widget>
        </item>
        <item row="0" column="2">
-        <widget class="QPushButton" name="pushButton">
+        <widget class="QPushButton" name="AddFromDB_pushButton">
          <property name="text">
           <string>Add from DB</string>
          </property>
@@ -881,7 +912,7 @@
          <rect>
           <x>10</x>
           <y>20</y>
-          <width>196</width>
+          <width>191</width>
           <height>101</height>
          </rect>
         </property>
@@ -958,7 +989,7 @@
         <x>229</x>
         <y>164</y>
         <width>261</width>
-        <height>115</height>
+        <height>105</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_2">
@@ -1193,7 +1224,7 @@
      <x>0</x>
      <y>0</y>
      <width>767</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
